--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-qr-code": "^2.0.11",
     "react-qr-scanner": "^1.0.0-alpha.11",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
     "react-toastify": "^9.1.3",
     "yup": "^1.2.0"
