--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
+    "react-share": "^4.4.1",
     "react-toastify": "^9.1.3",
     "yup": "^1.2.0"
   },
