--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-qr-code": "^2.0.11",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-redux": "^8.1.1",
