--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
     "react-share": "^4.4.1",
-    "react-toastify": "^9.1.3",
-    "yup": "^1.2.0"
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
