--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^6.13.0",
     "react-share": "^4.4.1",
     "react-toastify": "^9.1.3",
+    "redux-persist": "^6.0.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
