--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
    "rewrites": [
-     {
-       "source": "/(.*)",
-       "destination": "/"
-     }
+     { "source": "/api/(.*)", "destination": "/api/$1" },
+     { "source": "/(.*)", "destination": "/index.html" }
    ]
  }
+ 
